--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }}</title>
+  <meta charset="UTF-8">
+  <title>Start NLP</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
+
 <body>
-    <h1>Hello</h1>
+  <div class="wrapper">
+    <div>
+      <h1 class="title">Football</h1>
+      <form class="form">
+        <label>
+          Input data
+          <textarea class="form__textarea"></textarea>
+        </label>
+        <button class="button">Submit</button>
+      </form>
+    </div>
+    <footer class="footer">
+      &copy; 2020 <a href="https://jetsoftpro.com/" target="_blank">jetsoftpro.com</a>
+    </footer>
+  </div>
 </body>
+
 </html>
