made second table and output two dataframes

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,7 @@
   {% if title %}
   <title>{{ title }}</title>
   {% else %}
-  <title>NLP APP</title>
+  <title>NLP Application</title>
   {% endif %}
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
