--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -2,7 +2,8 @@
 
 
 {% block wrapper %}
-
-    {{ data|safe }}
-    
+    <h1>Football Result in tables</h1>
+    {{ data.ner_df|safe }}
+    <h1>Football General Entity Sentiment</h1>
+    {{ data.sentiment_df|safe }}
 {% endblock wrapper %}
