--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -4,11 +4,16 @@ html,body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+table {
+  width: 100%;
+}
+
 .wrapper {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   max-width: 1200px;
+  height: 100vh;
   margin: 0 auto;
   padding: 0 20px;
 }
