--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -3,9 +3,9 @@
 
 {% block wrapper %}
     <div>
-        <h1>Football Result in tables</h1>
-        {{ data.ner_df|safe }}
-        <h1>Football General Entity Sentiment</h1>
-        {{ data.sentiment_df|safe }}
+        {% for table in tables %}
+            <h2>{{ titles[loop.index] }}</h2>
+            {{ table|safe }}
+        {% endfor %}
     </div>  
 {% endblock wrapper %}
