to master merge

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
   <form class="form" method="POST" action="{{ url_for('start_process') }}">
     <label>
       Input data
-      <textarea class="form__textarea" name='rawdata'></textarea>
+      <textarea class="form__textarea" name="rawdata"></textarea>
     </label>
     <button class="button">Submit</button>
   </form>
